--- a/app/src/main/res/layout/activity_manage_account_page.xml
+++ b/app/src/main/res/layout/activity_manage_account_page.xml
@@ -1,142 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true"
+    android:scrollbars="vertical"
     android:background="@drawable/background_one"
     tools:context=".ManageAccountPage">
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/home_page_redirect"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        app:drawableLeftCompat="@drawable/back_arrow" />
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp">
-        <LinearLayout
+        android:orientation="vertical">
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center_horizontal"
-            android:padding="24dp"
-            android:background="@drawable/grey_border">
-            <TextView
+            android:id="@+id/home_page_redirect"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            app:drawableLeftCompat="@drawable/back_arrow" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="30dp"
+            app:cardCornerRadius="30dp"
+            app:cardElevation="20dp">
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_condensed_extrabold"
-                android:text="PROFILE"
-                android:textSize="48sp"
-                android:textAlignment="center"
-                android:textColor="@color/amber_400"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_semibold"
-                android:text="NAME"
-                android:textSize="18sp"
-                android:textColor="@color/gray_700"/>
-            <TextView
-                android:id="@+id/account_name"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/grey_border"
-                android:layout_marginTop="2dp"
-                android:padding="8dp"
-                android:text="FILLER TEXT"
-                android:textSize="18sp"
-                android:gravity="center_vertical"
-                android:drawablePadding="8dp"
-                app:drawableLeftCompat="@drawable/person" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/opensans_semibold"
-                android:text="EMAIL"
-                android:textSize="18sp"
-                android:textColor="@color/gray_700"/>
-            <TextView
-                android:id="@+id/account_email"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/grey_border"
-                android:layout_marginTop="2dp"
-                android:padding="8dp"
-                android:text="FILLER TEXT"
-                android:textSize="18sp"
-                android:gravity="center_vertical"
-                android:drawablePadding="8dp"
-                app:drawableLeftCompat="@drawable/email" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/opensans_semibold"
-                android:text="DATE OF BIRTH"
-                android:textSize="18sp"
-                android:textColor="@color/gray_700"/>
-            <TextView
-                android:id="@+id/account_dob"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/grey_border"
-                android:layout_marginTop="2dp"
-                android:padding="8dp"
-                android:text="FILLER TEXT"
-                android:textSize="18sp"
-                android:gravity="center_vertical"
-                android:drawablePadding="8dp"
-                app:drawableLeftCompat="@drawable/date" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/opensans_semibold"
-                android:text="PASSWORD"
-                android:textSize="18sp"
-                android:textColor="@color/gray_700"/>
-            <TextView
-                android:id="@+id/account_password"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/grey_border"
-                android:layout_marginTop="2dp"
-                android:padding="8dp"
-                android:text="FILLER TEXT"
-                android:textSize="18sp"
-                android:gravity="center_vertical"
-                android:drawablePadding="8dp"
-                app:drawableLeftCompat="@drawable/lock" />
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:fontFamily="@font/opensans_condensed_semibold"
-                android:text="Edit Profile"
-                android:id="@+id/edit_account_page_redirect"
-                android:textSize="26sp"
-                android:layout_marginTop="30dp"
-                android:backgroundTint="@color/amber_400"
-                app:cornerRadius = "20dp"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:fontFamily="@font/opensans_condensed_semibold"
-                android:text="Delete Profile"
-                android:id="@+id/delete_account_button"
-                android:textSize="26sp"
-                android:layout_marginTop="3dp"
-                android:backgroundTint="@color/amber_400"
-                app:cornerRadius = "20dp"/>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:padding="24dp"
+                android:background="@drawable/grey_border">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_condensed_extrabold"
+                    android:text="PROFILE"
+                    android:textSize="48sp"
+                    android:textAlignment="center"
+                    android:textColor="@color/amber_400"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="NAME"
+                    android:textSize="18sp"
+                    android:textColor="@color/gray_700"/>
+                <TextView
+                    android:id="@+id/account_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/grey_border"
+                    android:layout_marginTop="2dp"
+                    android:padding="8dp"
+                    android:text="FILLER TEXT"
+                    android:textSize="18sp"
+                    android:gravity="center_vertical"
+                    android:drawablePadding="8dp"
+                    app:drawableLeftCompat="@drawable/person" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="EMAIL"
+                    android:textSize="18sp"
+                    android:textColor="@color/gray_700"/>
+                <TextView
+                    android:id="@+id/account_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/grey_border"
+                    android:layout_marginTop="2dp"
+                    android:padding="8dp"
+                    android:text="FILLER TEXT"
+                    android:textSize="18sp"
+                    android:gravity="center_vertical"
+                    android:drawablePadding="8dp"
+                    app:drawableLeftCompat="@drawable/email" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="DATE OF BIRTH"
+                    android:textSize="18sp"
+                    android:textColor="@color/gray_700"/>
+                <TextView
+                    android:id="@+id/account_dob"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/grey_border"
+                    android:layout_marginTop="2dp"
+                    android:padding="8dp"
+                    android:text="FILLER TEXT"
+                    android:textSize="18sp"
+                    android:gravity="center_vertical"
+                    android:drawablePadding="8dp"
+                    app:drawableLeftCompat="@drawable/date" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="PASSWORD"
+                    android:textSize="18sp"
+                    android:textColor="@color/gray_700"/>
+                <TextView
+                    android:id="@+id/account_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/grey_border"
+                    android:layout_marginTop="2dp"
+                    android:padding="8dp"
+                    android:text="FILLER TEXT"
+                    android:textSize="18sp"
+                    android:gravity="center_vertical"
+                    android:drawablePadding="8dp"
+                    app:drawableLeftCompat="@drawable/lock" />
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:fontFamily="@font/opensans_condensed_semibold"
+                    android:text="Edit Profile"
+                    android:id="@+id/edit_account_page_redirect"
+                    android:textSize="26sp"
+                    android:layout_marginTop="30dp"
+                    android:backgroundTint="@color/amber_400"
+                    app:cornerRadius = "20dp"/>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:fontFamily="@font/opensans_condensed_semibold"
+                    android:text="Delete Profile"
+                    android:id="@+id/delete_account_button"
+                    android:textSize="26sp"
+                    android:layout_marginTop="3dp"
+                    android:backgroundTint="@color/amber_400"
+                    app:cornerRadius = "20dp"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+</ScrollView>
