--- a/app/src/main/res/layout/activity_weather_wizard_page.xml
+++ b/app/src/main/res/layout/activity_weather_wizard_page.xml
@@ -1,186 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true"
+    android:scrollbars="vertical"
     android:background="@drawable/background_two"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
     tools:context=".WeatherWizardPage">
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        app:drawableLeftCompat="@drawable/back_arrow" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/opensans_condensed_extrabold"
-        android:text="WeatherWizard"
-        android:textColor="@color/black"
-        android:textSize="48sp"
-        android:layout_marginTop="10dp"
-        app:drawableRightCompat="@drawable/wizard_icon" />
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="30dp"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp">
-        <LinearLayout
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center_horizontal"
-            android:padding="24dp"
-            android:background="@drawable/grey_border">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_condensed_extrabold"
-                android:text="Temperature Controls"
-                android:textSize="32sp"
-                android:textAlignment="center"
-                android:textColor="@color/amber_400"/>
-
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            app:drawableLeftCompat="@drawable/back_arrow" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/opensans_condensed_extrabold"
+            android:text="WeatherWizard"
+            android:textColor="@color/black"
+            android:textSize="48sp"
+            android:layout_marginTop="10dp"
+            app:drawableRightCompat="@drawable/wizard_icon" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="30dp"
+            app:cardCornerRadius="30dp"
+            app:cardElevation="20dp">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:padding="24dp"
+                android:background="@drawable/grey_border">
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    app:drawableStartCompat="@drawable/thermostat" />
-                <com.google.android.material.slider.Slider
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:valueFrom="18"
-                    android:valueTo="32"
-                    android:stepSize="1"/>
-            </LinearLayout>
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/grey_border"
-            android:orientation="vertical"
-            android:padding="24dp">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_condensed_extrabold"
-                android:text="Window Controls"
-                android:textAlignment="center"
-                android:textColor="@color/amber_400"
-                android:textSize="32sp" />
-            <TableLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:stretchColumns="*">
-                <TableRow
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:layout_gravity="end">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_semibold"
-                            android:layout_marginTop="80dp"
-                            android:text="Front Left Window"
-                            android:textAlignment="center"
-                            android:textSize="8sp"
-                            android:textColor="@color/gray_700"/>
-                        <com.google.android.material.switchmaterial.SwitchMaterial
-                            android:id="@+id/front_left"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textOn="Sending signal to open Front Left Window"
-                            android:textOff="Sending signal to close Front Left Window"
-                            android:checked="false"
-                            />
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_semibold"
-                            android:layout_marginTop="10dp"
-                            android:text="Back Left Window"
-                            android:textAlignment="center"
-                            android:textSize="8sp"
-                            android:textColor="@color/gray_700"/>
-                        <com.google.android.material.switchmaterial.SwitchMaterial
-                            android:id="@+id/back_left"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textOn="Sending signal to open Back Left Window"
-                            android:textOff="Sending signal to close Back Left Window"
-                            android:checked="false"/>
-                    </LinearLayout>
-                    <ImageView
-                        android:id="@+id/imageView"
+                    android:fontFamily="@font/opensans_condensed_extrabold"
+                    android:text="Temperature Controls"
+                    android:textSize="32sp"
+                    android:textAlignment="center"
+                    android:textColor="@color/amber_400"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:srcCompat="@drawable/taxi_top_view" />
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:layout_gravity="start">
-                        <TextView
+                        android:layout_gravity="center"
+                        app:drawableStartCompat="@drawable/thermostat" />
+                    <com.google.android.material.slider.Slider
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:valueFrom="18"
+                        android:valueTo="32"
+                        android:stepSize="1"/>
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="30dp"
+            app:cardCornerRadius="30dp"
+            app:cardElevation="20dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/grey_border"
+                android:orientation="vertical"
+                android:padding="24dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_condensed_extrabold"
+                    android:text="Window Controls"
+                    android:textAlignment="center"
+                    android:textColor="@color/amber_400"
+                    android:textSize="32sp" />
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:stretchColumns="*">
+                    <TableRow
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent">
+                        <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_semibold"
-                            android:layout_marginTop="80dp"
-                            android:text="Front Right Window"
-                            android:textAlignment="center"
-                            android:textSize="8sp"
-                            android:textColor="@color/gray_700"/>
-                        <com.google.android.material.switchmaterial.SwitchMaterial
-                            android:id="@+id/front_right"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:layout_gravity="end">
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:layout_marginTop="80dp"
+                                android:text="Front Left Window"
+                                android:textAlignment="center"
+                                android:textSize="8sp"
+                                android:textColor="@color/gray_700"/>
+                            <com.google.android.material.switchmaterial.SwitchMaterial
+                                android:id="@+id/front_left"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textOn="Sending signal to open Front Left Window"
+                                android:textOff="Sending signal to close Front Left Window"
+                                android:checked="false" />
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:layout_marginTop="10dp"
+                                android:text="Back Left Window"
+                                android:textAlignment="center"
+                                android:textSize="8sp"
+                                android:textColor="@color/gray_700"/>
+                            <com.google.android.material.switchmaterial.SwitchMaterial
+                                android:id="@+id/back_left"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textOn="Sending signal to open Back Left Window"
+                                android:textOff="Sending signal to close Back Left Window"
+                                android:checked="false"/>
+                        </LinearLayout>
+                        <ImageView
+                            android:id="@+id/imageView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textOn="Sending signal to open Front Right Window"
-                            android:textOff="Sending signal to close Front Right Window"
-                            android:checked="false"/>
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_semibold"
-                            android:layout_marginTop="10dp"
-                            android:text="Back Right Window"
-                            android:textAlignment="center"
-                            android:textSize="8sp"
-                            android:textColor="@color/gray_700"/>
-                        <com.google.android.material.switchmaterial.SwitchMaterial
-                            android:id="@+id/back_right"
+                            app:srcCompat="@drawable/taxi_top_view" />
+                        <LinearLayout
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textOn="Sending signal to open Back Right Window"
-                            android:textOff="Sending signal to close Back Right Window"
-                            android:checked="false"/>
-                    </LinearLayout>
-                </TableRow>
-            </TableLayout>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:layout_gravity="start">
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:layout_marginTop="80dp"
+                                android:text="Front Right Window"
+                                android:textAlignment="center"
+                                android:textSize="8sp"
+                                android:textColor="@color/gray_700"/>
+                            <com.google.android.material.switchmaterial.SwitchMaterial
+                                android:id="@+id/front_right"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textOn="Sending signal to open Front Right Window"
+                                android:textOff="Sending signal to close Front Right Window"
+                                android:checked="false"/>
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/opensans_semibold"
+                                android:layout_marginTop="10dp"
+                                android:text="Back Right Window"
+                                android:textAlignment="center"
+                                android:textSize="8sp"
+                                android:textColor="@color/gray_700"/>
+                            <com.google.android.material.switchmaterial.SwitchMaterial
+                                android:id="@+id/back_right"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textOn="Sending signal to open Back Right Window"
+                                android:textOff="Sending signal to close Back Right Window"
+                                android:checked="false"/>
+                        </LinearLayout>
+                    </TableRow>
+                </TableLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+</ScrollView>
